--- a/src/main/resources/templates/karyawan.html
+++ b/src/main/resources/templates/karyawan.html
@@ -121,17 +121,6 @@ input::-webkit-inner-spin-button {
                                                         </tr>
                                                         <tr>
                                                              <td>
-                                                                 Employee Name
-                                                             </td>
-                                                             <td>
-                                                                 <input class="form-control" name="txtNamaPegawai" id="txtNamaPegawai"/>
-                                                             </td>
-                                                        </tr>
-                                                        <tr>
-                                                             <td id="addEmployeeValidation" style="color:red;display:none">* Employee Name must be filled</td>
-                                                        </tr>
-                                                        <tr>
-                                                             <td>
                                                                  ID Number
                                                              </td>
                                                              <td>
@@ -142,7 +131,18 @@ input::-webkit-inner-spin-button {
                                                               <td id="addIdNumberValidation" style="color:red;display:none">* ID number must be filled</td>
                                                               <td id="addIdNumberValidationDigits" style="color:red;display:none">* ID number must be 16 digits</td>
                                                               <td id="addIdNumberValidationExist" style="color:red;display:none">* ID number has been exist</td>
-                                                        </tr>                                                        
+                                                        </tr>
+                                                        <tr>
+                                                             <td>
+                                                                 Employee Name
+                                                             </td>
+                                                             <td>
+                                                                 <input class="form-control" name="txtNamaPegawai" id="txtNamaPegawai"/>
+                                                             </td>
+                                                        <tr>
+                                                             <td id="addEmployeeValidation" style="color:red;display:none">* Employee Name must be filled</td>
+                                                        </tr>                                                             
+                                                        </tr>                                                                                                                
                                                         <tr>
                                                               <td>
                                                                  Address
@@ -207,6 +207,7 @@ input::-webkit-inner-spin-button {
                                                            </tr>
                                                            <tr>
                                                                <td id="addPhotoValidation" style="color:red;display:none">* Photo must be added</td>
+                                                               <td id="addPhotoValidationSize" style="color:red;display:none">* Size photo must be under 1 Mb</td>
                                                            </tr>
                                                            <tr>
                                                                <td>
@@ -674,6 +675,7 @@ input::-webkit-inner-spin-button {
     	var count7 = 0;
     	var count8 = 0;
     	var count9 = 0;
+    	var count10 = 0;
     	var listData = [[${ListKaryawanModel}]];
     	
     	if(document.getElementById("txtNamaPegawai").value == ""){
@@ -767,6 +769,7 @@ input::-webkit-inner-spin-button {
     		document.getElementById("addPhotoValidation").style.display="block";
     	}
     	else if(document.getElementById("fileFoto").value != ""){
+    		
     		if(count8>0){
     			count8--;
     		}
@@ -785,8 +788,8 @@ input::-webkit-inner-spin-button {
     			}
     			document.getElementById("addIdNumberValidationExist").style.display="none";
     		}
-    	} 
-    	
+    	}
+     	
     	if (count1>0 || count2>0 || count3>0 || count4>0 || count5>0 || count6>0 || count7>0 || count8>0 || count9>0){
     		return false;
     	}
